# pupkit-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  dist-workspace.toml  nohup.out
.github/: copilot-instructions.md
.github/workflows/: release.yml
icons/: claudecode.txt  codex.txt  copilot.txt
macos/PupkitShell/: Package.swift  README.md
src/: lib.rs  log.rs  main.rs
src/adapters/: claude.rs  codex.rs  common.rs  mod.rs
src/collectors/: ai_tools.rs  ai_usage.rs  copilot.rs  mod.rs  services.rs  system.rs
src/commands/: action.rs  ai_tools.rs  ai_usage.rs  auth.rs  bridge.rs  daemon.rs  details.rs  hook.rs  install.rs  mod.rs  monitor.rs  service.rs  services.rs  shell.rs  system_summary.rs  update.rs  welcome.rs
src/daemon/: app.rs  client.rs  config.rs  mod.rs  pending.rs  persistence.rs  priority.rs  registry.rs  server.rs  shell_launcher.rs  tty_inject.rs  watcher.rs
src/model/: mod.rs
src/protocol/: action.rs  event.rs  ids.rs  ipc.rs  mod.rs  session.rs
src/render/: mod.rs
src/shell/: mod.rs
tests/: adapters.rs  bridge_action_flow.rs  phase0_protocol.rs  server_ipc.rs
tests/fixtures/: README.md  copilot-api-usage.json  render-sample.txt  shell-services-linux.txt  shell-welcome-narrow.txt  shell-welcome-wide.txt
tests/snapshots/: README.md  ai-skills-narrow.txt  ai-skills-wide.txt  ai-tools-narrow.txt  ai-tools-wide.txt  ai-usage-narrow.txt  ai-usage-wide.txt  details-narrow.txt  details-wide.txt  system-summary-narrow.txt  system-summary-wide.txt  welcome-loading-narrow.txt  welcome-narrow.txt  (+4 more)
(+22 files in other folders)
