[package]
name = "pupkit"
version = "0.0.5"
edition = "2024"
rust-version = "1.85"
description = "A welcome-first CLI for surfacing local environment info and AI usage at a glance."
readme = "README.md"
repository = "https://github.com/pupkit-labs/pupkit-cli"
homepage = "https://github.com/pupkit-labs/pupkit-cli"
documentation = "https://docs.rs/pupkit"
license = "MIT"
authors = ["liupx <liupengxu@outlook.com>"]
keywords = ["cli", "welcome", "copilot", "codex", "claude"]
categories = ["command-line-utilities"]

[[bin]]
name = "pupkit"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
